# cache-lens

./: .gitignore  PRODUCT_SPEC.md  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: architecture.excalidraw
docs/superpowers/plans/: 2026-03-11-usage-tracking.md  2026-03-13-token-optimization-v2.md
docs/superpowers/specs/: 2026-03-11-usage-tracking-design.md  2026-03-13-token-optimization-v2-design.md  2026-03-13-token-spend-dashboard-design.md  2026-03-13-truefoundry-gateway-features-plan.md
examples/: agent-loop.json
src/cachelens/: aggregator.py  anomaly.py  cli.py  detector.py  heatmap.py  installer.py  metrics.py  models.py  parser.py  pricing.py  proxy.py  recommender.py  right_sizing.py  server.py  sessions.py  store.py  waste_detector.py
src/cachelens/engine/: analyzer.py  classifier.py  optimizer.py  repeats.py  scorer.py  suggestions.py  tokenizer.py  waste.py
src/cachelens/static/: app.js  index.html  style.css
src/tokenlens/: aggregator.py  anomaly.py  cli.py  detector.py  digest.py  forecast.py  guardrails.py  installer.py  metrics.py  models.py  pricing.py  proxy.py  quotas.py  recommender.py  right_sizing.py  router.py  server.py  sessions.py  store.py  top.py  waste_detector.py  webhooks.py
tests/: test_aggregator.py  test_anomaly.py  test_classifier.py  test_detector.py  test_digest.py  test_fixes.py  test_guardrails.py  test_heatmap.py  test_installer.py  test_integration.py  test_optimized_structure.py  test_parser.py  test_pricing.py  test_proxy.py  test_quotas.py  test_recommender.py  test_repeats.py  test_right_sizing.py  test_router.py  test_scorer.py  test_server.py  test_sessions.py  test_store.py  test_waste_detector.py
(+11 files in other folders)
