[project]
name = "tokenlens"
version = "0.1.0"
description = "Transparent AI proxy with token intelligence — waste detection, cost optimization, heatmaps, and anomaly detection."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Stephen Thorn" }]

dependencies = [
  "click>=8.1.7",
  "pydantic>=2.6.0",
  "tiktoken>=0.7.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
]

[project.scripts]
tokenlens = "tokenlens.cli:main"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenlens"]
include = [
  "src/tokenlens/static/**",
  "examples/**",
  "PRODUCT_SPEC.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
